[gd_scene load_steps=3 format=2]

[ext_resource path="res://boards/controller/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/title_font.tres" type="DynamicFont" id=2]

[node name="PauseMenu" type="PopupPanel"]

pause_mode = 2
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Container" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Label" type="Label" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Paused"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Resume" type="Button" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 320.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="Options" type="Button" parent="Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 320.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="ExitMenu" type="Button" parent="Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 288.0
margin_right = 320.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit to menu"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="ExitDesktop" type="Button" parent="Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 384.0
margin_right = 320.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit to desktop"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[connection signal="pressed" from="Container/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Container/ExitMenu" to="." method="_on_ExitMenu_pressed"]

[connection signal="pressed" from="Container/ExitDesktop" to="." method="_on_ExitDesktop_pressed"]


